<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.VenderRegisterActivity">

    <ScrollView
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_left_common"
                android:layout_marginTop="@dimen/margin_about_title"
                android:fontFamily="@font/josefinjans_light"
                android:text="@string/register_text"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/register_title_size" />

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_left_common"
                android:backgroundTint="@android:color/white"
                android:hint="@string/name"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />

            <EditText
                android:id="@+id/edt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_left_common"
                android:backgroundTint="@android:color/white"
                android:hint="@string/address"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />

            <EditText
                android:id="@+id/edt_mobile_number"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_left_common"
                android:backgroundTint="@android:color/white"
                android:hint="@string/mobile_number"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />

            <EditText
                android:id="@+id/edt_whatsapp_number"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_left_common"
                android:backgroundTint="@android:color/white"
                android:hint="@string/whatsapp_number"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />

            <EditText
                android:id="@+id/edt_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_left_common"
                android:backgroundTint="@android:color/white"
                android:hint="@string/password"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />

            <!--<EditText-->
            <!--android:id="@+id/edt_email"-->
            <!--android:inputType="textEmailAddress"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginStart="@dimen/margin_left_common"-->
            <!--android:backgroundTint="@android:color/white"-->
            <!--android:hint="@string/email"-->
            <!--android:textColor="@color/colorWhite"-->
            <!--android:textColorHint="@color/colorWhite" />-->

            <EditText
                android:id="@+id/edt_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_left_common"
                android:backgroundTint="@android:color/white"
                android:hint="@string/city"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />

            <EditText
                android:id="@+id/edt_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_left_common"
                android:backgroundTint="@android:color/white"
                android:hint="@string/state"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />

            <Button
                android:id="@+id/btn_register_vender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_above_btn"
                android:background="@drawable/btn_style"
                android:paddingTop="@dimen/btn_padding"
                android:paddingBottom="@dimen/btn_padding"
                android:text="@string/create_account"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:letterSpacing="0.1"
                android:paddingLeft="@dimen/padding_side"
                android:paddingRight="@dimen/padding_side" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>