<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context=".Activities.VenderLoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left_common"
        android:layout_marginTop="@dimen/margin_about_title"
        android:fontFamily="@font/josefinjans_light"
        android:text="@string/login_text"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/register_title_size" />

    <EditText
        android:id="@+id/edt_user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left_common"
        android:backgroundTint="@android:color/white"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite" />

    <EditText
        android:id="@+id/edt_user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left_common"
        android:backgroundTint="@android:color/white"
        android:hint="@string/password"
        android:inputType="phone"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite" />

    <Button
        android:id="@+id/btn_login_vender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_above_btn"
        android:background="@drawable/btn_style"
        android:letterSpacing="0.1"
        android:paddingLeft="@dimen/padding_side"
        android:paddingTop="@dimen/btn_padding"
        android:paddingRight="@dimen/padding_side"
        android:paddingBottom="@dimen/btn_padding"
        android:text="@string/login_text"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite" />

</LinearLayout>